Make the HttpArtifactCache pass a URI around instead of a URL.
Summary: URLs have a nasty habit of hitting the network from the .equals method, use URI instead.

Test Plan: CI